--- a/templates/index.html
+++ b/templates/index.html
@@ -81,10 +81,9 @@
     <h1>Devpost Twitter Reports</h1>
 
     <h2>Select hackathon:</h2>
-
     <ul>
-      {% for c in clients %}
-        <li><a href="/{{c.slug}}">{{c.hackathon}}</a></li>
+      {% for item in payload %}
+        <li><a href="/{{item.hackathon_slug}}">{{item.hackathon_name}}</a></li>
       {% endfor %}
   </body>
   </html>
